finish myArrayList