@@ -38,14 +38,23 @@ public class MyArrayList<T> implements List<T> {
 		mal.add(3);
 		System.out.println(Arrays.toString(mal.toArray()) + " size = " + mal.size);
 
-		mal.remove(new Integer(2));
+
+		mal.remove(Integer.valueOf(2));
 		System.out.println(Arrays.toString(mal.toArray()) + " size = " + mal.size);
 	}
 
 	@Override
 	public boolean add(T element) {
 		// TODO: FILL THIS IN!
-		return false;
+		if(size >= array.length){
+			T[] bigger = (T[]) new Object[array.length *2];
+			System.arraycopy(array, 0, bigger, 0, array.length);
+			array = bigger;
+		}
+		array[size] = element;
+		size++;
+
+		return true;
 	}
 
 	@Override
@@ -111,6 +120,11 @@ public class MyArrayList<T> implements List<T> {
 	@Override
 	public int indexOf(Object target) {
 		// TODO: FILL THIS IN!
+		for(int i=0; i<size; i++){
+			if(equals(target, array[i])){
+				return i;
+			}
+		}
 		return -1;
 	}
 
@@ -182,7 +196,13 @@ public class MyArrayList<T> implements List<T> {
 	@Override
 	public T remove(int index) {
 		// TODO: FILL THIS IN!
-		return null;
+		T oldElement = get(index);
+		for(int i=index; i < size-1; i++){
+			array[i] = array[i+1];
+		}
+
+		size--;
+		return oldElement;
 	}
 
 	@Override
@@ -202,7 +222,10 @@ public class MyArrayList<T> implements List<T> {
 	@Override
 	public T set(int index, T element) {
 		// TODO: FILL THIS IN!
-		return null;
+		T oldElement = get(index);
+		array[index] = element;
+		
+		return oldElement;
 	}
 
 	@Override
